--- a/SoccerGame/Pages/Shared/_Layout.cshtml
+++ b/SoccerGame/Pages/Shared/_Layout.cshtml
@@ -19,13 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Teams">About</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Teams">Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Players/Index">Students</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Players/Index">Players</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Coaches/Index">Courses</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Coaches/Index">Coaches</a>
                         </li>
                        
                     </ul>
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Contoso University - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2019 - Soccer Game - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
