--- a/SoccerGame/Pages/Shared/_Layout.cshtml
+++ b/SoccerGame/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Coaches/Index">Coaches</a>
                         </li>
-                       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Coaches</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
