--- a/SoccerGame/Pages/Coaches/Create.cshtml
+++ b/SoccerGame/Pages/Coaches/Create.cshtml
@@ -30,7 +30,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Coach.DepartmentID" class="control-label"></label>
-                <select asp-for="Coach.DepartmentID" class ="form-control" asp-items="ViewBag.DepartmentID"></select>
+                <select asp-for="Coach.DepartmentID" class="form-control"
+                        asp-items="@Model.DepartmentNameSL">
+                    <option value="">-- Select Department --</option>
+                </select>
+                <span asp-validation-for="Coach.DepartmentID" class="text-danger" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
