--- a/SoccerGame/Pages/Coaches/Edit.cshtml
+++ b/SoccerGame/Pages/Coaches/Edit.cshtml
@@ -1,33 +1,38 @@
 ﻿@page
-@model SoccerGame.Pages.Coaches.EditModel
+@model ContosoUniversity.Pages.Courses.EditModel
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h2>Edit</h2>
 
-<h4>Coach</h4>
+<h4>Course</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Coach.CoachID" />
+            <input type="hidden" asp-for="Course.CourseID" />
             <div class="form-group">
-                <label asp-for="Coach.FirstMidName" class="control-label"></label>
-                <input asp-for="Coach.FirstMidName" class="form-control" />
-                <span asp-validation-for="Coach.FirstMidName" class="text-danger"></span>
+                <label asp-for="Course.CourseID" class="control-label"></label>
+                <div>@Html.DisplayFor(model => model.Course.CourseID)</div>
             </div>
             <div class="form-group">
-                <label asp-for="Coach.LastName" class="control-label"></label>
-                <input asp-for="Coach.LastName" class="form-control" />
-                <span asp-validation-for="Coach.LastName" class="text-danger"></span>
+                <label asp-for="Course.Title" class="control-label"></label>
+                <input asp-for="Course.Title" class="form-control" />
+                <span asp-validation-for="Course.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Coach.DepartmentID" class="control-label"></label>
-                <select asp-for="Coach.DepartmentID" class="form-control" asp-items="ViewBag.DepartmentID"></select>
-                <span asp-validation-for="Coach.DepartmentID" class="text-danger"></span>
+                <label asp-for="Course.Credits" class="control-label"></label>
+                <input asp-for="Course.Credits" class="form-control" />
+                <span asp-validation-for="Course.Credits" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Course.Department" class="control-label"></label>
+                <select asp-for="Course.DepartmentID" class="form-control"
+                        asp-items="@Model.DepartmentNameSL"></select>
+                <span asp-validation-for="Course.DepartmentID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
