--- a/SoccerGame/Pages/Coaches/Index.cshtml
+++ b/SoccerGame/Pages/Coaches/Index.cshtml
@@ -22,30 +22,35 @@
             <th>
                 @Html.DisplayNameFor(model => model.Coaches[0].LastName)
             </th>
-          
+            <th>
+                @Html.DisplayNameFor(model => model.Coaches[0].DepartmentID)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model.Coaches)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CoachID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstMidName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-              
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.CoachID">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.CoachID">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.CoachID">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CoachID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstMidName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DepartmentID)
+            </td>
+
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.CoachID">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.CoachID">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.CoachID">Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
