--- a/SoccerGame/Pages/Teams/Index.cshtml
+++ b/SoccerGame/Pages/Teams/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@page
-@model SoccerGame.Pages.Team.IndexModel
+﻿@page "{id:int?}"
+@model SoccerGame.Pages.Teams.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Teams";
 }
 
-<h1>Index</h1>
+<h2>Teams</h2>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -13,36 +13,106 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Team[0].LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Team[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Team[0].HireDate)
-            </th>
+            <th>Last Name</th>
+            <th>First Name</th>
+            <th>Coaches</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Team) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HireDate)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.TeamData.Teams)
+        {
+            string selectedRow = "";
+            if (item.ID == Model.TeamID)
+            {
+                selectedRow = "table-success";
+            }
+            <tr class="@selectedRow">
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+              
+                <td>
+                    @if (item.GameAssignments != null)
+                    {
+                        @item.SoccerAssignment.Location
+                    }
+                </td>
+                <td>
+                    @{
+                        foreach (var coach in item.GameAssignments)
+                        {
+                            @coach.Coach.CoachID @:  @coach.Coach.FirstMidName <br />
+                        }
+                    }
+                </td>
+                <td>
+                    <a asp-page="./Index" asp-route-id="@item.ID">Select</a> |
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@if (Model.TeamData.Coaches != null)
+{
+    <h3>Courses Taught by Selected Instructor</h3>
+    <table class="table">
+        <tr>
+            <th></th>
+            <th>Number</th>
+            <th>Title</th>
+            <th>Department</th>
+        </tr>
+
+        @foreach (var item in Model.TeamData.Coaches)
+        {
+            string selectedRow = "";
+            if (item.CoachID == Model.CoachID)
+            {
+                selectedRow = "table-success";
+            }
+    <tr class="@selectedRow">
+        <td>
+            <a asp-page="./Index" asp-route-courseID="@item.CoachID">Select</a>
+        </td>
+        <td>
+            @item.CoachID
+        </td>
+        <td>
+            @item.DepartmentID
+        </td>
+
+    </tr>
+        }
+
+    </table>
+}
+
+@if (Model.TeamData.Enrollments != null)
+{
+    <h3>
+        Students Enrolled in Selected Course
+    </h3>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Grade</th>
+        </tr>
+        @foreach (var item in Model.TeamData.Enrollments)
+        {
+            <tr>
+                <td>
+                    @item.Player.FullName
+                </td>
+                
+            </tr>
+        }
+    </table>
+}
