--- a/SoccerGame/Pages/Coaches/Delete.cshtml
+++ b/SoccerGame/Pages/Coaches/Delete.cshtml
@@ -24,6 +24,10 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Coach.LastName)
         </dd>
+        
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Coach.DepartmentID)
+        </dt>
     </dl>
     
     <form method="post">
