--- a/SoccerGame/Pages/Coaches/Edit.cshtml
+++ b/SoccerGame/Pages/Coaches/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ContosoUniversity.Pages.Courses.EditModel
+@model SoccerGame.Pages.Coaches.EditModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,26 +13,22 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Course.CourseID" />
+            <input type="hidden" asp-for="Coach.CoachID" />
             <div class="form-group">
-                <label asp-for="Course.CourseID" class="control-label"></label>
-                <div>@Html.DisplayFor(model => model.Course.CourseID)</div>
+                <label asp-for="Coach.CoachID" class="control-label"></label>
+                <div>@Html.DisplayFor(model => model.Coach.CoachID)</div>
             </div>
             <div class="form-group">
-                <label asp-for="Course.Title" class="control-label"></label>
-                <input asp-for="Course.Title" class="form-control" />
-                <span asp-validation-for="Course.Title" class="text-danger"></span>
+                <label asp-for="Coach.FirstMidName" class="control-label"></label>
+                <input asp-for="Coach.FirstMidName" class="form-control" />
+                <span asp-validation-for="Coach.FirstMidName" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <label asp-for="Course.Credits" class="control-label"></label>
-                <input asp-for="Course.Credits" class="form-control" />
-                <span asp-validation-for="Course.Credits" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Course.Department" class="control-label"></label>
-                <select asp-for="Course.DepartmentID" class="form-control"
+                <label asp-for="Coach.DepartmentID" class="control-label"></label>
+                <select asp-for="Coach.DepartmentID" class="form-control"
                         asp-items="@Model.DepartmentNameSL"></select>
-                <span asp-validation-for="Course.DepartmentID" class="text-danger"></span>
+                <span asp-validation-for="Coach.DepartmentID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
