--- a/SoccerGame/Pages/Teams/Edit.cshtml
+++ b/SoccerGame/Pages/Teams/Edit.cshtml
@@ -1,12 +1,9 @@
 ﻿@page
-@model SoccerGame.Pages.Team.EditModel
-
+@model SoccerGame.Pages.Teams.EditModel
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Edit</h1>
-
+<h2>Edit</h2>
 <h4>Team</h4>
 <hr />
 <div class="row">
@@ -20,9 +17,9 @@
                 <span asp-validation-for="Team.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Team.Name" class="control-label"></label>
-                <input asp-for="Team.Name" class="form-control" />
-                <span asp-validation-for="Team.Name" class="text-danger"></span>
+                <label asp-for="Team.FirstMidName" class="control-label"></label>
+                <input asp-for="Team.FirstMidName" class="form-control" />
+                <span asp-validation-for="Team.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Team.HireDate" class="control-label"></label>
@@ -30,16 +27,47 @@
                 <span asp-validation-for="Team.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Team.GameAssignment.Location" class="control-label"></label>
+                <input asp-for="Team.GameAssignment.Location" class="form-control" />
+                <span asp-validation-for="Team.GameAssignment.Location" class="text-danger" />
             </div>
-        </form>
+            <div class="form-group">
+                <div class="table">
+                    <table>
+                        <tr>
+                            @{
+                                int cnt = 0;
+
+                                foreach (var coach in Model.AssignedCoachDataList)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                    @:</tr><tr>
+                                    }
+                                    @:<td>
+                                        <input type="checkbox"
+                                               name="selectedCoaches"
+                                               value="@coach.CoachID"
+                                               @(Html.Raw(coach.Assigned ? "checked=\"checked\"" : "")) />
+                                        @coach.CoachID @:  @coach.Title
+                                    @:</td>
+                                }
+                            @:</tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
