Fixed error with lanuching program

--- a/SoccerGame/Pages/Shared/_Layout.cshtml
+++ b/SoccerGame/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Coaches/Index">Coaches</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Coaches</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">Departments</a>
                         </li>
 
                     </ul>
